--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,10 +1,11 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: #3f51b5;
 }
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
+  background-color: #3f51b5;
 }
 
 .navbar-lewagon .navbar-brand img {
