--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -12,9 +12,9 @@
 </div> %>
 
 <!-- Remove the container if you want to extend the Footer to full width. -->
-<div class="container my-5">
+<div class="container my-5" style = "width = 100%">
 
-  <footer class="text-center text-lg-start" style="background-color: #3f51b5;">
+  <footer class="text-center text-lg-start" style="background-color: #3f51b5; width = 100%">
     <div class="container d-flex justify-content-center py-5">
       <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b; border-radius: 50%">
         <i class="fab fa-facebook-f"></i>
