--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -7,11 +7,10 @@
 }
 
 .login_container_box {
-  // border: 1px solid;
   margin: 5px;
-  padding: 10px;
+  padding: 30px;
   background-color: white;
-  box-shadow: 2px 2px 2px #000000;
+  box-shadow: 2px 2px 2px rgba(0,0,0,0.3);
 }
 
 #login_h2 {
