--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,4 @@
-<div class="banner"
->
+<div class="banner">
   <h1 class="display-4">Are you looking for musicians to improve your place atmosphere</h1>
   <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
   <p class="lead">
