--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
     <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://i.pinimg.com/originals/e6/a4/f2/e6a4f29f4a4531caf4ce08bbe9b89730.jpg" %>
+      <%= image_tag "https://i.pinimg.com/originals/e6/a4/f2/e6a4f29f4a4531caf4ce08bbe9b89730.jpg", class:"avatar" %>
     <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
