i didn't begin the booking controller but i did the create new offer

--- a/app/views/offers/_form.html.erb
+++ b/app/views/offers/_form.html.erb
@@ -1,9 +1,16 @@
-<%= simple_form_for @offer do |f| %>
-  <%= f.input :name, placeholder: 'MySuperBand' %>
-  <%= f.input :photo, as: :file %>
-  <%= f.input :role, placeholder: 'Singer' %>
-  <%= f.input :instagram_link, placeholder: 'https://www.instagram.com/telaviv/' %>
-  <%= f.input :youtube_link, placeholder: 'https://youtu.be/CICqmmpOPs4' %>
-  <%= f.input :spotify_link, placeholder: 'https://open.spotify.com/playlist/37i9dQZF1DWSYF6geMtQMW' %>
-  <%= f.submit class: 'btn btn-flat' %>
-<% end %>
+<div class="create_new_offer_container">
+  <div class="create_new_offer_container_box">
+    <h2 id="create_new_offer_h2">Propose your service</h2>
+    <%= simple_form_for @offer do |f| %>
+      <%= f.input :name, placeholder: 'MySuperBand' %>
+      <%= f.input :photo, as: :file %>
+      <%= f.input :role, placeholder: 'Singer' %>
+      <%= f.input :instagram_link, placeholder: 'https://www.instagram.com/telaviv/' %>
+      <%= f.input :youtube_link, placeholder: 'https://youtu.be/CICqmmpOPs4' %>
+      <%= f.input :spotify_link, placeholder: 'https://open.spotify.com/playlist/37i9dQZF1DWSYF6geMtQMW' %>
+       <div class="form-actions">
+        <%= f.submit class: "btn_create_new_offer" %>
+      </div>
+    <% end %>
+  </div>
+</div>
