--- a/app/assets/stylesheets/pages/_create-new-offer.scss
+++ b/app/assets/stylesheets/pages/_create-new-offer.scss
@@ -1,4 +1,4 @@
-.forgot_password_container {
+.create_new_offer_container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -6,7 +6,7 @@
   padding: 110px;
 }
 
-.forgot_password_container_box {
+.create_new_offer_container_box {
   margin: 5px;
   padding: 30px;
   background-color: white;
@@ -15,14 +15,14 @@
   border-radius: 10px;
 }
 
-#forgot_password_h2 {
+#create_new_offer_h2 {
   color: black;
   font-weight: bold;
   text-align: center;
   padding: 12px;
 }
 
-.btn_reset_password_instruction {
+.btn_create_new_offer {
 border: 1px solid black;
 background-color: #156fb4;
 border-radius: 8px;
@@ -30,6 +30,7 @@ text-align: center;
 color: white;
 font-weight: bold;
 margin-top: 10px;
+padding: 5px 10px;
 }
 
 .form-actions{
