--- a/app/assets/stylesheets/pages/_offers.scss
+++ b/app/assets/stylesheets/pages/_offers.scss
@@ -14,3 +14,16 @@ a {
   flex-direction: row;
   justify-content: space-between;
 }
+
+.list-in-line {
+  list-style: none;
+  display: inline;
+  font-size: 50px;
+  text-justify: distribute;
+  // justify-content: space-around;
+}
+
+// .light-background {
+//     background-image: linear-gradient(rgba(255, 139, 158, 0.5), rgba(255, 139, 158, 0.5)), url('https://png.pngtree.com/thumb_back/fw800/background/20190221/ourmid/pngtree-carnival-music-festival-music-festival-promotion-carnival-music-festival-image_13943.jpg');
+//     background-size: cover;
+//   }
