--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,24 +1,26 @@
-<div class="flex-space-between container mt-5 mb-5">
+<div class="container mt-5 mb-5">
+  <div class="flex-space-between container mt-5 mb-5">
   <h1>All the offers</h1>
   <%= link_to "Create a new offer", new_offer_path, class: "btn btn-ghost" %>
-</div>
-<div class="container mb-5">
-  <div class="row my-2">
-    <% @offers.each do |offer| %>
-        <div class="col-12 col-sm-6 mb-4" data-aos="zoom-in">
-          <a href= "offers/<%= offer.id %>" >
-            <div class="bg-white rounded shadow h-100">
-              <% if offer.photo.key %>
-                <%= cl_image_tag offer.photo.key, class: "offer-img rounded-top" %>
-              <% end %>
-              <div class="p-3 rounded-bottom d-flex flex-column">
-                <strong><%= offer.name %> </strong>
-                <small class="text-muted"><%= offer.role %></small>
+  </div>
+  <div class="light-background container mb-5 p-3 rounded">
+    <div class="row my-2">
+      <% @offers.each do |offer| %>
+          <div class="col-12 col-sm-6 mb-4" data-aos="zoom-in">
+            <a href= "offers/<%= offer.id %>" >
+              <div class="bg-white rounded shadow h-100">
+                <% if offer.photo.key %>
+                  <%= cl_image_tag offer.photo.key, class: "offer-img rounded-top" %>
+                <% end %>
+                <div class="p-3 rounded-bottom d-flex flex-column">
+                  <strong><%= offer.name %> </strong>
+                  <small class="text-muted"><%= offer.role %></small>
+                </div>
               </div>
-            </div>
-          </a>
-        </div>
-    <% end %>
+            </a>
+          </div>
+      <% end %>
+    </div>
   </div>
   <% if (@offers.length > 0) %>
     <%= link_to "Create a new offer", new_offer_path, class: "btn btn-ghost" %>
