--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -4,6 +4,7 @@
       <div>
         <h2><%= @offer.name %></h2>
         <p><%= @offer.role %></p>
+        <p><%= @offer.address %></p>
       </div>
       <div>
         <%= link_to "Book!", '#', class: "btn btn-flat" %>
