--- a/app/views/offers/_form.html.erb
+++ b/app/views/offers/_form.html.erb
@@ -5,6 +5,7 @@
       <%= f.input :name, placeholder: 'MySuperBand' %>
       <%= f.input :photo, as: :file %>
       <%= f.input :role, placeholder: 'Singer' %>
+      <%= f.input :address, placeholder: 'Tel Aviv' %>
       <%= f.input :instagram_link, placeholder: 'https://www.instagram.com/telaviv/' %>
       <%= f.input :youtube_link, placeholder: 'https://youtu.be/CICqmmpOPs4' %>
       <%= f.input :spotify_link, placeholder: 'https://open.spotify.com/playlist/37i9dQZF1DWSYF6geMtQMW' %>
