modified home navbar

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-}
+  box-shadow: 5px 5px 5px }
 
 .display-4, .lead {
   color: aliceblue;
