--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
+    <%= link_to "http://localhost:3000", class: "navbar-brand" do %>
       <%= image_tag "https://i.pinimg.com/originals/e6/a4/f2/e6a4f29f4a4531caf4ce08bbe9b89730.jpg", class:"avatar" %>
     <% end %>
 
