--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -7,7 +7,7 @@
         <p><%= @offer.address %></p>
       </div>
       <div>
-        <%= link_to "Book!", '#', class: "btn btn-flat" %>
+        <%= link_to "Book!", 'https://airbnb-karenrev.herokuapp.com/bookings/1', class: "btn btn-flat" %>
       </div>
     </div>
     <% if @offer.photo.key %>
